--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -2,31 +2,80 @@
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Automating Tasks with the Unix Shell (Continued)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building Programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Building Programs with Python (Continued)</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
+      <tr>
+        <td>Before</td>
+        <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank"
+            rel="noopener noreferrer">Pre-workshop survey</a> </td>
+      </tr>
+      <tr>
+        <td>09:30</td>
+        <td>Drop in session for setup help</td>
+      </tr>
+      <tr>
+        <td>10:00</td>
+        <td>Automating Tasks with the Unix Shell</td>
+      </tr>
+      <tr>
+        <td>11:30</td>
+        <td>Morning break</td>
+      </tr>
+      <tr>
+        <td>11:45</td>
+        <td>Automating Tasks with the Unix Shell (continued)</td>
+      </tr>
+      <tr>
+        <td>13:00</td>
+        <td>Lunch</td>
+      </tr>
+      <tr>
+        <td>14:00</td>
+        <td>Version control with GIT</td>
+      </tr>
+      <tr>
+        <td>15:30</td>
+        <td>Afternoon break</td>
+      </tr>
+      <tr>
+        <td>15:45</td>
+        <td>Version control with GIT (continued)</td>
+      </tr>
+      <tr>
+        <td>17:00</td>
+        <td>END</td>
+      </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
+    Due to scheduling conflicts with UCL rooms, day 2 of the workshop will run on a non-standard schedule.
+    There is no designated lunch break, but learners are welcome to bring and eat their own refreshments during the
+    workshop.
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version Control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Version Control with Git (Continued)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing Data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Managing Data with SQL (Continued)</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
-      <tr> <td>16:40</td>  <td>END</td> </tr>
+      <tr>
+        <td>09:30</td>
+        <td>Drop in session for setup help</td>
+      </tr>
+      <tr>
+        <td>10:00</td>
+        <td>Introduction to programming with Python</td>
+      </tr>
+      <tr>
+        <td>11:30</td>
+        <td>Break</td>
+      </tr>
+      <tr>
+        <td>12:00</td>
+        <td>Introduction to programming with Python (continued)</td>
+      </tr>
+      <tr>
+        <td>13:50</td>
+        <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank"
+            rel="noopener noreferrer">Post-workshop Survey</a></td>
+      </tr>
+      <tr>
+        <td>14:00</td>
+        <td>END</td>
+      </tr>
     </table>
   </div>
 </div>
