--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
+    <h3>Day 1 (Wednesday 21st Feb)</h3>
     <table class="table table-striped">
       <tr>
         <td>Before</td>
@@ -9,7 +9,7 @@
       </tr>
       <tr>
         <td>09:30</td>
-        <td>Drop in session for setup help</td>
+        <td>Drop-in session for setup help</td>
       </tr>
       <tr>
         <td>10:00</td>
@@ -20,61 +20,74 @@
         <td>Morning break</td>
       </tr>
       <tr>
-        <td>11:45</td>
-        <td>Automating Tasks with the Unix Shell (continued)</td>
+        <td>12:00</td>
+        <td>Automating Tasks with the Unix Shell (Continued)</td>
       </tr>
       <tr>
         <td>13:00</td>
-        <td>Lunch</td>
+        <td>Lunch break</td>
       </tr>
       <tr>
         <td>14:00</td>
-        <td>Version control with GIT</td>
+        <td>Version control with Git</td>
       </tr>
       <tr>
         <td>15:30</td>
         <td>Afternoon break</td>
       </tr>
       <tr>
-        <td>15:45</td>
-        <td>Version control with GIT (continued)</td>
+        <td>16:00</td>
+        <td>Version control with Git (Continued)</td>
       </tr>
       <tr>
         <td>17:00</td>
-        <td>END</td>
+        <td>Wrap-up day 1</td>
       </tr>
     </table>
   </div>
   <div class="col-md-6">
-    <h3>Day 2</h3>
-    Due to scheduling conflicts with UCL rooms, day 2 of the workshop will run on a non-standard schedule.
-    There is no designated lunch break, but learners are welcome to bring and eat their own refreshments during the
-    workshop.
+    <h3>Day 2 (Thursday 22nd Feb)</h3>
     <table class="table table-striped">
       <tr>
         <td>09:30</td>
-        <td>Drop in session for setup help</td>
+        <td>Drop-in session for setup help</td>
       </tr>
       <tr>
         <td>10:00</td>
-        <td>Introduction to programming with Python</td>
+        <td>Building programs in Python</td>
       </tr>
       <tr>
         <td>11:30</td>
-        <td>Break</td>
+        <td>Morning break</td>
       </tr>
       <tr>
         <td>12:00</td>
-        <td>Introduction to programming with Python (continued)</td>
+        <td>Building programs in Python (Continued)</td>
       </tr>
       <tr>
-        <td>13:50</td>
-        <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank"
-            rel="noopener noreferrer">Post-workshop Survey</a></td>
+        <td>13:00</td>
+        <td>Lunch break</td>
       </tr>
       <tr>
         <td>14:00</td>
-        <td>END</td>
+        <td>Building programs in Python (Continued)</td>
+      </tr>
+      <tr>
+        <td>15:30</td>
+        <td>Afternoon break</td>
+      </tr>
+      <tr>
+        <td>16:00</td>
+        <td>Building programs in Python (Continued)</td>
+      </tr>
+      <tr>
+        <td>17:00</td>
+        <td>Wrap-up day 2</td>
+      </tr>
+      <tr>
+        <td>After</td>
+        <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank"
+            rel="noopener noreferrer">Post-workshop Survey</a></td>
       </tr>
     </table>
   </div>
